DnD breaks on Wayland if the destination uses default ::drag-motion handler
Screencast_from_2018-07-31_20_31_24
This can be observed in several DnD tests: testdnd
, testdnd2
, testtreednd
and possibly others.
Once gdk_drop_set_actions()
is called with 0 (dragging over a valid destination, then over an invalid one), gtk_drag_dest_motion()
will keep calling gdk_drop_status()
with 0 and every drop will be rejected.
Edited by Ghost User