gtkdnd: Consult drag actions in gtk_drag_dest_motion()

Querying the drop actions does not work in some cases: the Wayland
backend sets them to 0 when there is a drag over an invalid destination
and they are not reset until the pointer leaves the surface.

Comparing drag actions against the ones supported by the destination
makes more sense.

Fixes https://gitlab.gnome.org/GNOME/gtk/issues/1256